feat: credit card and auth
