# src/Authentication/auth.dto.ts
@@ -1,0 +1,13 @@
+export interface SignUpBodyDTO {
+  email: string;
+  password: string;
+}
+
+export interface SignInBodyDTO {
+  email: string;
+  password: string;
+}
+
+export interface ForgetPasswordDTO {
+  email: string;
+}
